# gpu_discovery_barrier

./: OOPSLA_AE.txt  README.md
code/discovery_protocol/api/: common.h  discovery.cl  discovery.h
code/discovery_protocol/custom_atomics/: custom_atomics.cl
code/discovery_protocol/locks/: locks.cl
code/experiments/common/cmake/: FindOpenCL.cmake
code/experiments/common/include/OpenCL/: my_opencl.h
code/experiments/lonestar_gpu_opencl/: CMakeLists.txt
code/experiments/lonestar_gpu_opencl/apps/bfs/: bfs.h  bfs_non_port.cpp  bfs_port.cpp
code/experiments/lonestar_gpu_opencl/apps/bfs/kernel/: bfs_common.cl  bfs_non_port_kernel.cl  bfs_port_kernel.cl
code/experiments/lonestar_gpu_opencl/apps/dmr/: dmr.h  dmr_non_port.cpp  dmr_port.cpp  meshfiles.h  shmesh.h
code/experiments/lonestar_gpu_opencl/apps/dmr/kernel/: dmr_common.cl  dmr_non_port_kernel.cl  dmr_port_kernel.cl
code/experiments/lonestar_gpu_opencl/apps/mst/: mst.h  mst_non_port.cpp  mst_port.cpp
code/experiments/lonestar_gpu_opencl/apps/mst/kernel/: mst_common.cl  mst_non_port_kernel.cl  mst_port_kernel.cl
code/experiments/lonestar_gpu_opencl/apps/sssp/: sssp.h  sssp_non_port.cpp  sssp_port.cpp
code/experiments/lonestar_gpu_opencl/apps/sssp/kernel/: sssp_common.cl  sssp_non_port_kernel.cl  sssp_port_kernel.cl
code/experiments/lonestar_gpu_opencl/include/: block_scan_cl.h  component.h  component_cl.h  gbar.h  gbar_cl.h  graph.h  graph_cl.h  header.h  kernelconf.h  portable_endian.h  worklist_cl.h  worklistc.h
code/experiments/lonestar_gpu_opencl/scripts/: run_suite.py  tune_wg_size.py  wg_size_data.py
code/experiments/occupancy_tests/: CMakeLists.txt
code/experiments/occupancy_tests/scripts/: run_occupancy_tests.py  run_occupancy_timing.py
code/experiments/occupancy_tests/src/: device_query.c  occupancy_test.c  time_prot.c
code/experiments/occupancy_tests/src/kernels/: occupancy_test.cl
code/experiments/pannotia/: CMakeLists.txt
code/experiments/pannotia/datasets/: README.txt
code/experiments/pannotia/graph_app/bc/: bc.cpp  bc.h  bc_gb.cpp
code/experiments/pannotia/graph_app/bc/kernel/: bc_kernel.cl
code/experiments/pannotia/graph_app/color/: color.cpp  color_gb.cpp
code/experiments/pannotia/graph_app/color/kernel/: color_kernel.cl
code/experiments/pannotia/graph_app/mis/: mis.cpp  mis_gb.cpp
code/experiments/pannotia/graph_app/mis/kernel/: mis_kernel.cl
code/experiments/pannotia/graph_app/sssp/: sssp.cpp  sssp_gb.cpp
code/experiments/pannotia/graph_app/sssp/kernel/: sssp_kernel.cl
code/experiments/pannotia/graph_parser/: parse.cpp  util.cpp  util.h
code/experiments/pannotia/scripts/: run_suite.py  tune_wg_size.py  wg_size_data.py
licenses/discovery_protocol/: license
licenses/lonestar_gpu/: license
licenses/pannotia/: license
